--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "main": "bin/index.js",
     "scripts": {
         "start": "tsc && node bin/index.js",
+        "build": "tsc && node bin/index.js && rm -rf public/* && hugo",
         "build:generator": "tsc",
         "build:site": "rm -rf public/* && hugo",
-        "build": "tsc && node bin/index.js && rm -rf public/* && hugo",
         "dev": "tsc && node bin/index.js && hugo server --disableFastRender --noHTTPCache",
+        "dev:site": "hugo server --disableFastRender --noHTTPCache",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
