add wgsl syntax highlighting, wgsl content

--- a/config.json
+++ b/config.json
@@ -9,6 +9,9 @@
             "renderer": {
                 "unsafe": true
             }
+        },
+        "highlight": {
+            "noClasses": false
         }
     }
 }
