update deps, bump version

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "WebGPU quick reference and documentation",
+    "title": "WebGPU and WGSL quick reference and documentation",
     "baseUrl": "https://example.org",
     "languageCode": "en-US",
     "DefaultContentLanguage": "en",
